knowledge_base/knowledge/v15/capl/structured/Obsolete/EthReceiveRxError.md
# EthReceiveRxError

> Category: `Obsolete` | Type: `notes`

## Description

See Also

| Deprecated Function Replaced by: on ethernetErrorPacket |  |  |  |  |
|---|---|---|---|---|
| Function Syntax | long EthReceiveRxError(char *callback ); |  |  |  |
| Function | Use this function to register a CAPL callback function to receive corrupt Ethernet packets. The callback function is called, if a corrupt packet is received. The callback must have the following signature: void <OnCorruptEthernetPacket> ( long channel, long errorCode, long packetLength ) |  |  |  |
| Parameters | callback name of CAPL callback function |  |  |  |
| Return Values | 0 or error code |  |  |  |
| Availability | Up to Version | Restricted To | Measurement Setup | Simulation/Test Setup |
| 8.1-12.0 | Ethernet | — | • |  |
| Example Node System - PreStart in CAPL Browser on preStart{ EthReceiveRxError( "OnCorruptEthernetPacket" );} Node Callback Function in CAPL Browser void OnCorruptEthernetPacket( LONG channel, LONG errorCode, LONG packetLength ){ BYTE srcMac[6]; // get source MAC address of the corrupt packet EthGetThisData( 6, elCount(srcMac), srcMac ); write("Corrupt packet received from MAC address %X:%X:%X:%X:%X:%X with error code %d", srcMac[0], srcMac[1], srcMac[2], srcMac[3], srcMac[4], srcMac[5], errorCode);} |  |  |  |  |

| Version 15© Vector Informatik GmbH |
|---|
